# khaya-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRINCIPLES.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: changelog.md  getting-started.md  index.md  internals.md  requirements.txt
docs/api-reference/: client.md  config.md  exceptions.md
docs/guides/: asr.md  async.md  configuration.md  error-handling.md  logging.md  translation.md  tts.md
src/khaya/: __init__.py  config.py  constants.py  khaya_client.py  logger.py  models.py  utils.py
src/khaya/services/: asr.py  base_api.py  translation.py  tts.py
tests/: conftest.py  test_config.py  test_integration.py  test_khaya_client.py
