[tool.poetry]
name = "khaya"
version = "0.1.0"
description = "Python SDK for the GhanaNLP Khaya API — translation, ASR, and TTS for African languages"
authors = [
    "GhanaNLP Team <team@ghananlp.org>",
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "khaya", from = "src" },
]
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
httpx = "^0.28.1"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.mypy]
files = ["src", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
