[project]
name = "khaya"
version = "0.1.0"
description = "Python SDK for the GhanaNLP Khaya API — translation, ASR, and TTS for African languages"
authors = [
    {name = "GhanaNLP Team", email = "team@ghananlp.org"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["translation", "asr", "tts", "african languages", "nlp", "ghananlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "python-dotenv>=1.0.1",
]
dev = [
    "mypy>=1.12.0",
    "pre-commit>=4.0.1",
    "isort>=5.13.2",
    "ruff>=0.8.0",
]
docs = [
    "mkdocs>=1.6.0,<2.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Khaya-AI/khaya-sdk"
Repository = "https://github.com/Khaya-AI/khaya-sdk"
Issues = "https://github.com/Khaya-AI/khaya-sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/khaya"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/khaya --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a real API key (deselect with -m 'not integration')",
]

[tool.mypy]
files = ["src", "tests"]
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
